Update configuration URLs and add EmporioBreak rules

--- a/general_config.conf
+++ b/general_config.conf
@@ -78,7 +78,7 @@ udp-policy-not-supported-behaviour = REJECT
 include = sr_ru_extended.conf
 
 # URL-адрес обновления файла конфигурации
-update-url = https://cdn.jsdelivr.net/gh/misha-tgshv/shadowrocket-configuration-file@release/conf/sr_ru_public_lists.conf
+update-url = https://raw.githubusercontent.com/EmporioBreak/Shadowrocket-cfg/refs/heads/main/general_config.conf
 
 # Выбираем наиболее быстрый сервера для прокси
 # [Proxy Group]
@@ -102,5 +102,7 @@ RULE-SET,https://raw.githubusercontent.com/misha-tgshv/shadowrocket-configuratio
 RULE-SET,https://raw.githubusercontent.com/misha-tgshv/shadowrocket-configuration-file/refs/heads/release/rules/domains_discord.list,PROXY
 # Список портов Discord
 RULE-SET,https://raw.githubusercontent.com/helmiau/clashrules/refs/heads/main/shadowrocket/Game_Discord_Ports.list,PROXY
+# Список EmporioBreak
+RULE-SET,https://raw.githubusercontent.com/EmporioBreak/Shadowrocket-cfg/refs/heads/main/myrules.list,PROXY
 # Финальное правило маршрутизации
 FINAL,DIRECT
